@@ -7,7 +7,7 @@
 #ifdef _BOARD_STM32VLDISCOVERY
 typedef miosix::Gpio<GPIOC_BASE,9> led1; //Green LED
 typedef miosix::Gpio<GPIOC_BASE,8> led2; //Blue LED
-#elif defined(_BOARD_POLINODE)
+#elif defined(_BOARD_WANDSTEM)
 typedef miosix::greenLed led1;
 typedef miosix::redLed   led2;
 #endif
