@@ -37,7 +37,6 @@ void delayMs(unsigned int mseconds)
     register const unsigned int count=42000;
     #elif defined(SYSCLK_FREQ_100MHz)
     register const unsigned int count=25000;
-    #warning "untested clock frequency"
     #elif SYSCLK_FREQ_84MHz
     register const unsigned int count=21000;
     #else
@@ -84,7 +83,6 @@ void delayUs(unsigned int useconds)
                  "           itt   lo         \n"
                  "           addlo r1, r1, #1 \n"
                  "           blo   ___loop_u  \n"::"r"(useconds):"r1","r2");
-    #warning "untested clock frequency"
     #else //SYSCLK_FREQ_84MHz
     asm volatile("           mov   r1, #21    \n"
                  "           mul   r2, %0, r1 \n"
